# tfm_segmentacion

./: .gitignore  README.md  download_dataset.py  environment.yml  pyproject.toml  requirements.txt  set_env.sh
app/: README.md  requirements.txt  run.sh
app/backend/: main.py
app/backend/clinical_analysis/: __init__.py  abcd_analyzer.py  abcde_analyzer.py
app/frontend/: index.html
config/: data_config.yaml  model_config.yaml  train_config.yaml
eda_results/: dataset_comparison.csv  detailed_stats.json  preprocessing_recommendations.csv
experiments/test_unet_5epochs/: config.yaml  training_history.csv
experiments_ckpt/comparative_analysis/: analysis_summary.json  metrics_comparison.csv
experiments_ckpt/notebook_experiments/: analysis_results.csv  experiment_summary.json
notebooks/: 01_eda.ipynb  02_model_experiments.ipynb  02_model_train.ipynb  03_model_eval.ipynb  03_results_analysis.ipynb  04_clinical_features.ipynb
scripts/: evaluate_model.py  extract_features.py  predict_single_image.py  preprocess_dataset.py  train_model.py
src/clinical_analysis/: __init__.py  abcde_analyzer.py
src/data_preparation/: data_loader.py  dataset.py  preprocessing.py
src/models/: __init__.py  attention_unet.py  deeplabv3plus.py  losses.py  metrics.py  residual_unet.py  transunet.py  unet.py  unet_plusplus.py
src/train_eval_scripts/: evaluate_model.py  train_model.py
src/training/: trainer.py
src/utils/: evaluate_model.py  extract_features.py  predict_single_image.py  train_model.py
tests/: test_dataloader.py  test_models.py  test_preprocessing.py
(+26 files in other folders)
