[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfm_segmentacion"
version = "0.1.0"
description = "Medical image segmentation project"
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "numpy==1.24.0",
    "pandas==2.0.0",
    "matplotlib==3.7.0",
    "scikit-learn==1.3.0",
    "scikit-image==0.21.0",
    "jupyter==1.0.0",
    "tqdm==4.65.0",
    "pyyaml==6.0",
    "seaborn==0.12.2",
    "nibabel==5.1.0",
    "plotly==5.14.1",
    "scipy==1.10.1",
    "albumentations==1.3.0",
    "opencv-python==4.8.0.76",
    "tensorboard==2.13.0",
    "wandb==0.15.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]